Added DP-1 for all states

--- a/THS_locators.properties
+++ b/THS_locators.properties
@@ -1,12 +1,32 @@
 # locators.properties
+TestURL= red
+
+# locators.properties
 login.groupID = //*[@id="inputGroupID"]
 login.userName = //*[@id="inputUserName"]
 login.password = //*[@id="inputPassword"]
 login.submit = //*[@id="authSubmit"]/div/div[1]
 
-#Basic informationpage
+#Basic informationpage - Address Validation
+basicinformationapage.businessOwnerdNO=xpath://*[@name='policyTerm|businessPolicy' and @value='N']
+basicinformationapage.businessOwnerdYES=xpath://*[@name='policyTerm|businessPolicy' and @value='Y']
+basicinformationapage.insuredfirstname=xpath://*[@name='policyTerm|primaryInsured|firstName']
+basicinformationapage.insuredlastName=xpath://*[@name='policyTerm|primaryInsured|lastName']
+basicinformationapage.riskStreet=xpath://*[@name='policyTerm|location|address|street']
+basicinformationapage.riskUnitAPTLOT=xpath://*[@name='policyTerm|location|address|street2']
+basicinformationapage.riskCity=xpath://*[@name='policyTerm|location|address|city']
+basicinformationapage.riskZipcode=xpath://*[@name='policyTerm|location|address|zipCode']
+basicinformationapage.insuredDOB=xpath://*[@name='policyTerm|primaryInsured|dateOfBirth']
+basicinformationapage.occupancy=xpath://*[@name='policyTerm|location|occupancy']
+basicinformationapage.nearFireHydrantNO=xpath://*[@name='policyTerm|location|nearFireHydrant' and @value='N']
+basicinformationapage.nearFireHydrantYES=xpath://*[@name='policyTerm|location|nearFireHydrant' and @value='Y']
+basicinformationapage.validateButton=xpath://*[@id="validate-address-button"] 
+basicinformationapage.confirmAddress=xpath://button[contains(@class, 'ember-view btn thig-btn btn-block')][1]
 
-basicinformationapage.businessOwnerdNO =xpath: /html/body/div[1]/div[4]/div[1]/div[2]/div/div[2]/div/form/section/div[2]/div[1]/div[1]/div[1]/div/span/label[2]/input 
-#basicinformationapage.businessOwnerdYES =xpath: /html/body/div[1]/div[4]/div[1]/div[2]/div/div[2]/div/form/section/div[2]/div[1]/div[1]/div[1]/div/span/label[1]/input
-basicinformationapage.businessOwnerdYES=xpath:/html/body/div[1]/div[4]/div[1]/div[2]/div/div[2]/div/form/section/div[2]/div[1]/div[1]/div[1]/div/span/label[1]/input
+basicinformationapage.yearBuilt=xpath://*[@name='policyTerm|location|constructionYear']
+
+
+
+
+
 
