--- a/THS_locators.properties
+++ b/THS_locators.properties
@@ -6,6 +6,12 @@ login.groupID = //*[@id="inputGroupID"]
 login.userName = //*[@id="inputUserName"]
 login.password = //*[@id="inputPassword"]
 login.submit = //*[@id="authSubmit"]/div/div[1]
+policyPage.exitbutton=xpath://button[contains(@class, 'ember-view btn thig-btn cancel-button')]
+
+#Homepage
+homepage.searchforpolicynumber=id:quote-list-filter-policy-num
+homepage.submitSearchbutton=id:quote-list-filter-submit
+homepage.clicktoOpenPolicy=xpath://button[contains(@class, 'text-link policy-num-link')]
 
 #Basic informationpage - Address Validation
 basicinformationapage.businessOwnerdNO=xpath://*[@name='policyTerm|businessPolicy' and @value='N']
@@ -22,11 +28,17 @@ basicinformationapage.nearFireHydrantNO=xpath://*[@name='policyTerm|location|nea
 basicinformationapage.nearFireHydrantYES=xpath://*[@name='policyTerm|location|nearFireHydrant' and @value='Y']
 basicinformationapage.validateButton=xpath://*[@id="validate-address-button"] 
 basicinformationapage.confirmAddress=xpath://button[contains(@class, 'ember-view btn thig-btn btn-block')][1]
-
+basicinformationapage.addressValidatorheader2=xpath://*[@id='addressValidator']/div[6]/div
 basicinformationapage.yearBuilt=xpath://*[@name='policyTerm|location|constructionYear']
+basicinformationapage.policyForm=xpath://*[@name='policyTerm|policyForm']
+basicinformationapage.dwellingLossSettlement=xpath://*[@name='policyTerm|location|dwellingLossSettlement']
+basicinformationapage.consentToProceed=xpath://*[@name='policyTerm|underwriting|consentToProceed']
+basicinformationapage.mailingAddressToggleNO=xpath://*[@name='policyTerm|primaryInsured|mailingAddressToggle' and @value='N']
+basicinformationapage.mailingAddressToggleYES=xpath://*[@name='policyTerm|primaryInsured|mailingAddressToggle' and @value='Y']
+basicinformationapage.hasApplicantMovedNO=xpath://*[@name='policyTerm|underwriting|hasApplicantMoved' and @value='N']
+basicinformationapage.hasApplicantMovedYES=xpath://*[@name='policyTerm|underwriting|hasApplicantMoved' and @value='Y']
+basicinformationapage.continuebutton=xpath://button[contains(@class, 'ember-view btn thig-btn continue-button')]
 
-
-
-
-
-
+#PolicyPage
+policyPage.getPolicyNumber=xpath://*[@data-identifier='policyTerm|policyNum']
+policyPage.exitbutton=xpath://button[contains(@class, 'ember-view btn thig-btn cancel-button')]
