added - coverage converter class to validate Coverages A B C

--- a/THS_locators.properties
+++ b/THS_locators.properties
@@ -12,8 +12,17 @@ policyPage.exitbutton=xpath://button[contains(@class, 'ember-view btn thig-btn c
 homepage.searchforpolicynumber=id:quote-list-filter-policy-num
 homepage.submitSearchbutton=id:quote-list-filter-submit
 homepage.clicktoOpenPolicy=xpath://button[contains(@class, 'text-link policy-num-link')]
+homepage.expandSearchPolicy=xpath://*[@id='quote-list']/table/tbody/tr[1]/td[1]/img
+homepage.policyEffectiveDate=xpath://*[@id='quote-list']/table/tbody/tr[1]/td[6]
+homepage.firstNameLastName=xpath://*[@id='quote-list']/table/tbody/tr[1]/td[7]
+homepage.policyStatus=xpath://*[@id='quote-list']/table/tbody/tr[1]/td[8]
+homepage.policyState=xpath://*[@id='quote-list']/table/tbody/tr[1]/td[9]
+homepage.policyAgency=xpath://*[@id='quote-list']/table/tbody/tr[1]/td[10]
+homepage.policycreatedBy=xpath://*[@id='quote-list']/table/tbody/tr[1]/td[11]
 
-#Basic informationpage - Address Validation
+
+
+#Basic informationpage - Address Validation policyTerm|primaryInsured|firstName
 basicinformationapage.businessOwnerdNO=xpath://*[@name='policyTerm|businessPolicy' and @value='N']
 basicinformationapage.businessOwnerdYES=xpath://*[@name='policyTerm|businessPolicy' and @value='Y']
 basicinformationapage.insuredfirstname=xpath://*[@name='policyTerm|primaryInsured|firstName']
@@ -42,3 +51,72 @@ basicinformationapage.continuebutton=xpath://button[contains(@class, 'ember-view
 #PolicyPage
 policyPage.getPolicyNumber=xpath://*[@data-identifier='policyTerm|policyNum']
 policyPage.exitbutton=xpath://button[contains(@class, 'ember-view btn thig-btn cancel-button')]
+policyPage.effectiveDate=xpath://*[@name='policyTerm|effectiveDate']
+policyPage.roofBuilt=xpath://*[@name='policyTerm|location|constructionYear']
+policyPage.roofYear=xpath://*[@name='policyTerm|location|roofYear']
+policyPage.squareFoot=xpath://*[@name='policyTerm|underwriting|squareFootage']
+policyPage.roofingMaterial=xpath://*[@name='policyTerm|location|roofingMaterial']
+policyPage.constructionType=xpath://*[@name='policyTerm|location|constructionType']
+policyPage.numberOfStories=xpath://*[@name='policyTerm|location|numberOfStories']
+policyPage.roofShape=xpath://*[@name='policyTerm|location|roofShape']
+policyPage.rowTownHome=xpath://*[@name='policyTerm|location|townhouseOrRowhouse']
+policyPage.newPurchase_Yes=xpath://*[@name='policyTerm|underwriting|newPurchase' and @value='Y']
+policyPage.newPurchase_No=xpath://*[@name='policyTerm|underwriting|newPurchase' and @value='N']
+policyPage.priorPolicyExpirationDate=xpath://*[@name='policyTerm|underwriting|priorPolicyExpiration']
+policyPage.foundationType=xpath://*[@name='policyTerm|underwriting|foundationType']
+policyPage.seplementHeat_Yes=xpath://*[@name='policyTerm|underwriting|supplementalHeatSource' and @value='Y']
+policyPage.seplementHeat_No=xpath://*[@name='policyTerm|underwriting|supplementalHeatSource' and @value='N']
+policyPage.fireProtectionClass=xpath://*[@name='policyTerm|location|fireProtectionClass']
+policyPage.dwelling_covA=xpath://*[@name='policyTerm|coverages|coverageA']
+policyPage.otherStructures_covB=xpath://*[@name='policyTerm|coverages|coverageB']
+policyPage.personalProperties_covC=xpath://*[@name='policyTerm|coverages|coverageC']
+policyPage.ale_Fair_RentalValue_D1_covE=xpath://*[@name='policyTerm|coverages|coverageEPercentage']
+policyPage.liability_D1_CovL=xpath://*[@name='policyTerm|coverages|coverageL']
+policyPage.medPay_D1_CovM=xpath://*[@name='policyTerm|coverages|coverageM']
+policyPage.aop_deducitable=xpath://*[@name='policyTerm|coverages|allOtherPerilsDeductible']
+policyPage.windHail_Exclusion_Yes=xpath://*[@name='policyTerm|coverages|thsWindCoverageEligible' and @value='Y']
+policyPage.windHail_Exclusion_No=xpath://*[@name='policyTerm|coverages|thsWindCoverageEligible' and @value='N']
+policyPage.windHail_Deductible=xpath://*[@name='policyTerm|coverages|windHailDeductible']
+
+#Losses
+policyPage.previous_losses_Yes=xpath://*[@name='policyTerm|underwriting|pastLosses' and @value='Y']
+policyPage.previous_losses_No=xpath://*[@name='policyTerm|underwriting|pastLosses' and @value='N']
+policyPage.loss_totalNumberofLosses=xpath://*[@name='policyTerm|underwriting|losses|count']
+policyPage.loss_DateofLoss=xpath://*[@name='policyTerm|underwriting|losses|loss0|date']
+policyPage.loss_CauseofLoss=xpath://*[@name='policyTerm|underwriting|losses|loss0|type']
+policyPage.loss_AmountofLoss=xpath://*[@name='policyTerm|underwriting|losses|loss0|amount']
+policyPage.loss_LossDescription=xpath://*[@name='policyTerm|underwriting|losses|loss0|description']
+policyPage.loss_DesignatedCatastrophe_Yes=xpath://*[@name='policyTerm|underwriting|losses|loss0|industryCatastropheLoss' and @value='Y']
+policyPage.loss_DesignatedCatastrophe_No=xpath://*[@name='policyTerm|underwriting|losses|loss0|industryCatastropheLoss' and @value='N']
+policyPage.residenceType=xpath://*[@name='policyTerm|location|residenceType']
+
+policyPage.dwellingOccasionallyRented_Yes=xpath://*[@name='policyTerm|underwriting|occasionalRental' and @value='Y']
+policyPage.dwellingOccasionallyRented_No=xpath://*[@name='policyTerm|underwriting|occasionalRental' and @value='N']
+
+#credits
+policyPage.credits_Association=xpath://*[@name='policyTerm|endorsements|ASSN|endorsementSelected']
+policyPage.credits_AssoType=xpath://*[@name='policyTerm|endorsements|ASSN|lineItems|LI_0|associationType']
+policyPage.credits_AssoMembership=xpath://*[@name='policyTerm|endorsements|ASSN|lineItems|LI_0|membershipNumber']
+policyPage.credits_AutoHome=xpath://*[@name='policyTerm|endorsements|AUTOHOME|endorsementSelected']
+policyPage.credits_PaidInFull=xpath://*[@name='policyTerm|endorsements|PAIDINFULL|endorsementSelected']
+policyPage.credits_PaperLess=xpath://*[@name='policyTerm|endorsements|PAPERLESS|endorsementSelected']
+policyPage.credits_ProtDev=xpath://*[@name='policyTerm|endorsements|PROTDEV|endorsementSelected']
+policyPage.credits_ProtDev_deadBoltSmokeAlarmFire=xpath://*[@name='policyTerm|endorsements|PROTDEV|lineItems|LI_0|deadBoltSmokeAlarmFire']
+policyPage.credits_ProtDev_centralBurglarAlarm=xpath://*[@name='policyTerm|endorsements|PROTDEV|lineItems|LI_0|centralBurglarAlarm']
+policyPage.credits_ProtDev_centralFireAlarm=xpath://*[@name='policyTerm|endorsements|PROTDEV|lineItems|LI_0|centralFireAlarm']
+policyPage.credits_ProtDev_localBurglarAlarm=xpath://*[@name='policyTerm|endorsements|PROTDEV|lineItems|LI_0|localBurglarAlarm']
+policyPage.credits_ProtDev_localFireAlarm=xpath://*[@name='policyTerm|endorsements|PROTDEV|lineItems|LI_0|localFireAlarm']
+policyPage.credits_StormMit=xpath://*[@name='policyTerm|endorsements|STORMMIT|endorsementSelected']
+policyPage.credits_StormMit_Options=xpath://*[@name='policyTerm|endorsements|STORMMIT|lineItems|LI_0|stormMitigation']
+
+#rating results
+policyPage.rateButton=xpath://button[contains(@class, 'ember-view btn thig-btn rate-button')]
+policyPage.continueButton=xpath://button[contains(@class, 'ember-view btn thig-btn continue-button')]
+policyPage.saveButton=xpath://button[contains(@class, 'ember-view btn thig-btn save-button')]
+policyPage.ratingResults=xpath://*[@id='rating-results']/div/table/tbody/tr/td[1]
+
+
+
+
+
+
